log
Thu 16 May 2024 04:08:44 AM UTC: 
 sudoku.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  3|4
total_score: 20/70
f86e449
Thu 16 May 2024 04:13:41 AM UTC: 
 sudoku.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:72:22: error: ‘j’ undeclared (first use in this function)
   72 |       if (n->sudo[i][j] == 0){
      |                      ^
sudoku.c:72:22: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
84f0161
Thu 16 May 2024 04:14:06 AM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:68:10: error: expected ‘,’ or ‘;’ before ‘if’
   68 |          if(n->sudo[i][j] == 0)
      |          ^~
sudoku.c:67:14: error: unused variable ‘columna’ [-Werror=unused-variable]
   67 |          int columna = j
      |              ^~~~~~~
sudoku.c:73:22: error: ‘j’ undeclared (first use in this function)
   73 |       if (n->sudo[i][j] == 0){
      |                      ^
sudoku.c:73:22: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation failed
a03ed24
Thu 16 May 2024 04:14:11 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:68:10: error: expected ‘,’ or ‘;’ before ‘if’
   68 |          if(n->sudo[i][j] == 0)
      |          ^~
sudoku.c:67:14: error: unused variable ‘columna’ [-Werror=unused-variable]
   67 |          int columna = j
      |              ^~~~~~~
sudoku.c:73:22: error: ‘columna’ undeclared (first use in this function)
   73 |       if (n->sudo[i][columna] == 0){
      |                      ^~~~~~~
sudoku.c:73:22: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation failed
ed5d07a
Thu 16 May 2024 04:14:35 AM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:67:21: error: expected ‘;’ before ‘if’
   67 |          columna = j
      |                     ^
      |                     ;
   68 |          if(n->sudo[i][j] == 0)
      |          ~~          
Compilation failed
c7ff242
Thu 16 May 2024 04:14:44 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
b4ac34a
Thu 16 May 2024 04:15:44 AM UTC: 
 sudoku.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  3|4
total_score: 20/70
9eb0984
